--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 spring:
   datasource:
-    url: jdbc:h2:mem:testdb
+    url: jdbc:h2:mem:test
     name: testdb
     username: sa
     password:
@@ -15,3 +15,7 @@ spring:
       ddl-auto: none
     database-platform: org.hibernate.dialect.H2Dialect
     show-sql: true
+
+  mvc:
+    pathmatch:
+      matching-strategy: ANT_PATH_MATCHER
